Z-index issues in navbar basic search after input-group update

--- a/src/scss/atlas-theme/_navbar.scss
+++ b/src/scss/atlas-theme/_navbar.scss
@@ -34,6 +34,10 @@
 			}
 		}
 	}
+
+	.form-control:focus {
+		z-index: 0;
+	}
 }
 
 .basic-search-slider {
